--- a/src/assets/css/index-pc.css
+++ b/src/assets/css/index-pc.css
@@ -6,7 +6,7 @@ html, body{
 .head-wrapper{
     width: 100%;
     height: 165px;
-    background: url(./../img/bg2.png) no-repeat 0 0 / 100% 100%;
+    background: url(./../../../static/img/bg2.png) no-repeat 0 0 / 100% 100%;
 }
 .head{
     margin: 0 auto;
@@ -217,7 +217,7 @@ html, body{
     bottom: 20px;
     left: 50%;
     margin-left: 600px;
-    background: #34a2d6 url(./../img/totop.png) no-repeat center;
+    background: #34a2d6 url(./../../../static/img/totop.png) no-repeat center;
     background-size: 30px 30px;
     opacity: 0.6;
     display: none;
