--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,7 +7,7 @@ html, body{
     height: .6rem;
     color: #fff;
     line-height: 1;
-    background: url(./../img/bg.png) no-repeat 0 0 / 100% 100%;
+    background: url(./../../../static/img/bg.png) no-repeat 0 0 / 100% 100%;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -179,7 +179,7 @@ html, body{
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: #34a2d6 url(./../img/totop.png) no-repeat center;
+    background: #34a2d6 url(./../../../static/img/totop.png) no-repeat center;
     background-size: 30px 30px;
     opacity: 0.6;
     display: none;
