--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,186 +1,52 @@
 html, body{
     -webkit-overflow-scrolling: touch;
 }
-.head {
+#app, .container, .body{
+    height: 100%;
+}
+.body{
     width: 100%;
-    padding: 0 .1rem;
-    height: .6rem;
-    color: #fff;
-    line-height: 1;
-    background: url(./../img/bg.png) no-repeat 0 0 / 100% 100%;
+    padding-top: .45rem;
+    background: url(./../img/bg_m.png) no-repeat 0 0 / 100% 100%;
     -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-.logo-box {
-    overflow: hidden;
-}
-.logo-box img {
-    width: .6rem;
-    height: .6rem;
+.body .logo{
+    width: .85rem;
+    height: .85rem;
     position: relative;
-    top: .025rem;
-}
-.logo-box .cn {
-    font-size: .2rem;
-    margin-bottom: 5px;
-}
-.logo-box .en {
-    font-size: .13rem;
-}
-.app-box {
-    margin-right: .06rem;
-}
-.app-box img {
-    width: .15rem;
-    height: .26rem;
-    margin-right: .1rem;
-}
-.app-box .cn {
-    color: #fff;
-    font-size: .12rem;
-    margin-bottom: 2px;
-}
-.app-box .en {
-    color: #fff;
-    font-size: .1rem;
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-    margin-left: -2px;
+    top: 2px;
+    margin-top: .8rem;
+    left: 50%;
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
 }
 
-.body {
-    padding: 0 15px;
-}
-.web {
-    padding: .1rem 0;
-    line-height: 1;
-    border-bottom: 1px solid #ddd;
-}
-.web img {
-    width: .54rem;
-    height: .54rem;
-    margin-right: .1rem;
-    border-radius: 3px;
-}
-.web .cn {
-    font-size: .18rem;
-    color: #000;
-    margin-bottom: 10px;
-}
-.web .link {
-    color: #108EE9;
-    font-size: .12rem;
-}
-.vol-box {
-    padding: .15rem 0;
-    line-height: 1;
-    border-bottom: 1px solid #ddd;
-}
-.vol-box .vol {
-    height: .5rem;
-}
-.vol-box .txt {
-    color: #666;
-    font-size: .14rem;
-}
-.vol-box .num {
-    font-size: .22rem;
-    color: #151419;
-}
-.vol-box .num .us {
-    color: #666;
-    font-size: .13rem;
-    padding-left: .1rem;
-}
-.vol-box .rank {
-    font-size: .12rem;
-    color: #fff;
-    line-height: 1.5;
-    padding: 0 .05rem;
-    background: #108EE9;
-    border-radius: 2px;
-}
-.vol-box .country {
-    font-size: .13rem;
-    color: #666;
-}
-.intro {
-    padding: .1rem 0;
-    color: #111210;
-    font-size: .14rem;
-    line-height: 1.5;
-    border-bottom: 1px solid #ddd;
-}
-
-.wrapper .title {
-    font-size: .18rem;
-    font-weight: 600;
-    color: #111210;
-    line-height: 1.5;
-    margin-bottom: .05rem;
-}
-.market-list .item {
-    padding: .1rem 0;
-    line-height: 1;
-    border-bottom: 1px solid #ddd;
-}
-.market-list .con{
-    width: 40%;
-}
-.market-list .name {
-    color: #999;
-    font-size: .1rem;
-}
-.market-list .ex {
-    font-size: .15rem;
-    color: #3f3f3f;
-    margin: 3px 0 5px;
-}
-.market-list .ex span {
-    color: #999;
-    font-size: .12rem;
-}
-.market-list .vol {
-    font-size: .1rem;
-    color: #999;
-}
-.market-list .price-box{
-    width: 33%;
-}
-.market-list .price {
-    font-size: .14rem;
-    color: #151419;
-    margin-bottom: 5px;
-}
-.market-list .cny {
-    font-size: .1rem;
-    color: #999;
-}
-.market-list .rate {
-    width: .72rem;
-    height: .28rem;
-    line-height: .28rem;
-    color: #fff;
+.body .txt1{
     text-align: center;
-    font-size: .12rem;
-    background: #000;
-    border-radius: 1px;
+    color: #fff;
+    font-size: .18rem;
+    line-height: .3rem;
 }
-.market-list .rate.up {
-    background: #00AC1E;
+
+.body .txt1:first-of-type{
+    margin-top: .5rem;
 }
-.market-list .rate.down {
-    background: #C52B18;
+
+.dl-box{
+    margin-top: .1rem;
+    text-align: center;
 }
-.to-top{
-    width: 40px;
-    height: 40px;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #34a2d6 url(./../img/totop.png) no-repeat center;
-    background-size: 30px 30px;
-    opacity: 0.6;
-    display: none;
+
+.dl-box .dl-a{
+    display: block;
+    width: 1.85rem;
+    height: .4rem;
+    line-height: .4rem;
+    border: 1px solid #fff;
+    text-align: center;
+    color: #fff;
+    font-size: .14rem;
+    border-radius: .4rem;
+    margin: .5rem auto 0;
 }
