--- a/src/assets/css/market.css
+++ b/src/assets/css/market.css
@@ -1,56 +1,12 @@
 html, body{
     -webkit-overflow-scrolling: touch;
 }
-.head {
-    width: 100%;
-    padding: 0 .1rem;
-    height: .6rem;
-    color: #fff;
-    line-height: 1;
-    background: url(./../img/bg.png) no-repeat 0 0 / 100% 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+::-webkit-scrollbar{
+    display: none;
 }
-.logo-box {
-    overflow: hidden;
-}
-.logo-box img {
-    width: .6rem;
-    height: .6rem;
-    position: relative;
-    top: .025rem;
-}
-.logo-box .cn {
-    font-size: .2rem;
-    margin-bottom: 5px;
-}
-.logo-box .en {
-    font-size: .13rem;
-}
-.app-box {
-    margin-right: .06rem;
-}
-.app-box img {
-    width: .15rem;
-    height: .26rem;
-    margin-right: .1rem;
-}
-.app-box .cn {
-    color: #fff;
-    font-size: .12rem;
-    margin-bottom: 2px;
-}
-.app-box .en {
-    color: #fff;
-    font-size: .1rem;
-    -webkit-transform: scale(0.9);
-    transform: scale(0.9);
-    margin-left: -2px;
-}
-
 .body {
-    padding: 0 15px;
+    padding: .45rem 15px 0;
+    background: #fff;
 }
 .web {
     padding: .1rem 0;
