--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -34,8 +34,11 @@
 }
 
 .body-m .dl-box{
-    margin-top: .1rem;
     text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 1.1rem;
+    z-index: 99;
 }
 
 .body-m .dl-box .dl-a{
@@ -48,7 +51,7 @@
     color: #fff;
     font-size: .14rem;
     border-radius: .4rem;
-    margin: .5rem auto 0;
+    margin: 40px auto 0;
 }
 
 .body-m .bigtxt{
