--- a/src/assets/css/market-pc.css
+++ b/src/assets/css/market-pc.css
@@ -37,7 +37,7 @@
 }
 
 .m-body-pc .ex-info .info {
-  /* height: 136px; */
+  height: 136px;
   padding-right: 25px;
   position: relative;
   word-break: break-all;
@@ -54,14 +54,28 @@
 .m-body-pc .ex-info .info .intro {
   font-size: 14px;
   line-height: 24px;
+  min-height: 75px;
   margin-bottom: 5px;
+  overflow: hidden;
+  position: relative;
+}
+
+.m-body-pc .ex-info .info .intro.all{
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
   line-clamp: 3;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  position: relative;
+}
+
+.m-body-pc .ex-info .info .look{
+  position: absolute;
+  color: #fff;
+  font-size: 14px;
+  right: -20px;
+  bottom: 20px;
+  padding: 0 5px;
+  background: #128EE9;
+  border-radius: 3px;
 }
 
 .m-body-pc .ex-info .info .link {
@@ -87,25 +101,13 @@
 
 .m-body-pc .ex-info .right {
   width: 25%;
-  height: 136px;
-  padding: 30px;
+  padding: 20px 0 0;
   overflow: hidden;
+  text-align: center;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-}
-
-.m-body-pc .ex-info .right .top {
-  margin-bottom: 25px;
-  overflow: hidden;
-}
-
-.m-body-pc .ex-info .right .bot {
-  overflow: hidden;
-  vertical-align: bottom;
-  line-height: 1;
-  position: relative;
 }
 
 .m-body-pc .ex-info .right .p1 {
@@ -114,13 +116,14 @@
 }
 
 .m-body-pc .ex-info .right .rank {
+  display: inline-block;
   color: #fff;
   font-size: 12px;
   line-height: 1.5;
   padding: 2px 5px;
   background: #108EE9;
   border-radius: 2px;
-  margin: 0;
+  margin-bottom: 20px;
 }
 
 .m-body-pc .ex-info .right .price {
@@ -131,9 +134,6 @@
 .m-body-pc .ex-info .right .us {
   font-size: 16px;
   color: #666;
-  position: absolute;
-  right: 0;
-  bottom: 2px;
 }
 
 .m-body-pc .wrapper {
