--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -5,6 +5,7 @@ html, body {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	border: 0;
 	font-family: PingFangSC-Regular, "微软雅黑";
+	background: #108ee9;
 }
 html, body, ul, li, ol, p, div, h1, h2, h3, h4, h5, h6, nav, header, footer, table, tr, td, th, form, label {
 	-webkit-margin-after: 0;
