--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -30,14 +30,14 @@
 }
 
 .body-m .txt1:first-of-type{
-    margin-top: .5rem;
+    margin-top: .4rem;
 }
 
 .body-m .dl-box{
     text-align: center;
     position: absolute;
     width: 100%;
-    bottom: 1.1rem;
+    bottom: .9rem;
     z-index: 99;
 }
 
@@ -51,7 +51,7 @@
     color: #fff;
     font-size: .14rem;
     border-radius: .4rem;
-    margin: 40px auto 0;
+    margin: .25rem auto 0;
 }
 
 .body-m .bigtxt{
